--- a/app/views/online_pay/_online_pay_and_user_detail_content.html.erb
+++ b/app/views/online_pay/_online_pay_and_user_detail_content.html.erb
@@ -1,17 +1,24 @@
 <tr class="tr_relpace">
-	<td><%=link_to  online_pay.user.username,registe_index_path(system: online_pay.user.system,username: online_pay.user.username),method: :get%></td>
-	<td><%= online_pay.reconciliation_id %></td>
-	<td>
+	<td class="td_nowrap"><%=link_to  online_pay.user.username,registe_index_path(system: online_pay.user.system,username: online_pay.user.username),method: :get%></td>
+	<td class="td_nowrap"><%= online_pay.reconciliation_id %></td>
+	<td class="td_nowrap">
 		<%= online_pay.amount %>
 		<% if actual_pay(online_pay.payway) %>
 			(<%=online_pay.actual_amount%>)
 		<% end %>
 	</td>
-	<td><%= online_pay.get_convert_currency %></td>
-	<td><%= status_mapping(online_pay.status) %></td>
+	<td class="td_nowrap"><%= online_pay.get_convert_currency %></td>
+	<td class="td_nowrap"><%= status_mapping(online_pay.status) %></td>
 <!-- 	<td><%= online_pay.callback_status %></td> -->
-	<td><%= payway_paytype_mapping(online_pay.payway.camelize + online_pay.paytype.camelize) %></td>
-	<td><%= online_pay.order_no %></td>
-	<td><%= online_pay.created_at %></td>
-	<td><%= online_pay.reason %></td>
+	<td class="td_nowrap"><%= payway_paytype_mapping(online_pay.payway.camelize + online_pay.paytype.camelize) %></td>
+	<td class="td_nowrap">
+<!-- 		<%= link_to online_pay.order_no,show_single_online_pay_path(online_pay) %> -->
+		<a href="#" onclick="window.open('<%=show_single_online_pay_path(online_pay)%>',
+			'_blank','scrollbars=0,toolbar=no,location=no,directories=no,status=yrd,menubar=no,scrollbars=no,resizable=yes;width=200');
+			return false">
+			<%=online_pay.order_no%>
+		</a>
+	</td>
+	<td class="td_nowrap"><%= online_pay.created_at %></td>
+	<td class="td_nowrap"><%= online_pay.reason %></td>
 </tr>
