--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -8,25 +8,33 @@
 		<div class="row-fluid">
 			<div class="well">
 			        <%= form_tag transaction_reconciliation_index_path,method:"get",remote: :true,id: "index_and_export_form" do %>
-				 <%= label_tag(:l1, "支付类型:",class:"label_inline") %> 
-				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"],["积分","score"],["电子现金","e_cash"]])) %> 
-				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>
-				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
-				 <%= label_tag(:l3, "对账状态:",class:"label_inline") %> 
-				 <%= select_tag(:reconciliation_flag,options_for_select([["",""],["未对账","0"],["对账失败","1"],["对账成功","2"]])) %> 
-				 </br>
-				 <%= label_tag(:l3, "交易号:",class:"label_inline") %> <%= text_field_tag(:transactionid) %>
-				 <%= label_tag(:l4, "订单号/补款号:",class:"label_inline") %> <%= text_field_tag(:order_no) %>
-				 <%= label_tag(:l7, "发票状态:",class:"label_inline") %> 
-				 <%= select_tag(:confirm_flag,options_for_select([["",""],["未确认","0"],["已确认","2"]])) %> 
-				 </br>
-				 <%= label_tag(:l8, "国家:",class:"label_inline") %>
-				 <%= select_tag(:country,options_for_select([["",""],["德国","de"],["荷兰","nl"],["中国","cn"],["奥地利","at"],["英国","gb"]])) %> 
-				 <%= label_tag(:l9, "包裹发送国家:",class:"label_inline") %>
+				 <%= label_tag(:l1, "交易来源系统:",class:"label_inline") %> 
+				 <%= select_tag(:system,options_for_select([["",""],["包裹网站","mypost4u"],["quaie","quaie"]])) %> 
+				 &nbsp;&nbsp;&nbsp;
+				 <%= label_tag(:l2, "包裹发送国家:",class:"label_inline") %>
 				 <%= select_tag(:send_country,options_for_select([["",""],["德国","de"],["荷兰","nl"],["中国","cn"],["奥地利","at"],["英国","gb"]])) %> 
 				 </br>
-				 <%= label_tag(:l5, "交易开始时间:",class:"label_inline") %> <%= datetime_field_tag(:start_time) %>
-				 <%= label_tag(:l6, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
+				 <%= label_tag(:l3, "支付类型:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"],["积分","score"],["电子现金","e_cash"]])) %> 
+				 &nbsp;&nbsp;&nbsp;
+				 <%= label_tag(:l4, "支付子类型:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;
+				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
+				 </br>
+				 <%= label_tag(:l5, "对账状态:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				 <%= select_tag(:reconciliation_flag,options_for_select([["",""],["未对账","0"],["对账失败","1"],["对账成功","2"]])) %> 
+				 &nbsp;&nbsp;&nbsp;
+				 <%= label_tag(:l6, "发票状态:",class:"label_inline") %>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				 <%= select_tag(:confirm_flag,options_for_select([["",""],["未确认","0"],["已确认","2"]])) %> 
+				 </br>
+				 <%= label_tag(:l7, "交易号:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				 <%= text_field_tag(:transactionid) %>
+				 &nbsp;&nbsp;&nbsp;
+				 <%= label_tag(:l8, "订单/补款号:",class:"label_inline") %> &nbsp;&nbsp;
+				 <%= text_field_tag(:order_no) %>
+				 </br>
+				 <%= label_tag(:l9, "交易开始时间:",class:"label_inline") %> <%= datetime_field_tag(:start_time) %>
+				 &nbsp;&nbsp;&nbsp;
+				 <%= label_tag(:l10, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
 				 <div class="btn-toolbar">
 					<%= submit_tag("查询",class: "btn btn-primary") %>
 					<%= link_to "导出",transaction_reconciliation_export_path,class: "btn",method: "get",id: "link_to_export"%>
