--- a/app/views/transaction_reconciliation/_index.html.erb
+++ b/app/views/transaction_reconciliation/_index.html.erb
@@ -29,13 +29,11 @@
 	</td> -->
 	<td class="td_nowrap">  <%= reconciliation_detail.timestamp %>  </td>
 	<td>  
-		<% msg="#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}" %>
 		<% if  reconciliation_detail.reconciliation_flag==ReconciliationDetail::RECONCILIATIONDETAIL_FLAG['SUCC'] %> 
-			<%= link_to "手工撤销",modify_transaction_reconciliation_path(transactionid: reconciliation_detail.id,flag: reconciliation_detail.reconciliation_flag),method: "post",data: { confirm: "请确认是否手工撤销对账成功记录?\n#{msg}" } %>
+			<%= link_to "手工撤销",modify_transaction_reconciliation_path(transactionid: reconciliation_detail.id,flag: reconciliation_detail.reconciliation_flag),method: "post",data: { confirm: "请确认是否手工撤销对账成功记录?\n#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}" } %>
 		<% else %>
-			<a href="#" onclick="alert(<%=msg%>);return false">
+			<a href="#" onclick="modify_reconciliation('<%=reconciliation_detail.id%>','<%=reconciliation_detail.reconciliation_flag%>','<%="#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}"%>');return false">
 				手工对账
-				<%=msg%>
 			</a>
 		<% end %>
 	</td>
