--- a/app/views/transaction_reconciliation/confirm_search.html.erb
+++ b/app/views/transaction_reconciliation/confirm_search.html.erb
@@ -10,14 +10,22 @@
 
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
-			<strong>提示:</strong> 请输入对账日期进行查询,空则默认为所有未对账数据!
+			<strong>提示:</strong> 请输入对账日期进行查询!
 		</div>
 		<div class="row-fluid">
 			<div class="well">
 				<%= form_tag transaction_reconciliation_confirm_path,method:"post" do %>
-				 	 <%= label_tag(:l1, "对账日期:") %> <%= datetime_field_tag(:end_time,@transaction_date,class: "auto_refresh") %>
-					 <%= label_tag(:l2, "最晚对账成功时间:") %> <%= text_field_tag(:max_updated_at_display,@max_updated_at,disabled: true) %>
+				 	 <%= label_tag(:l1, "对账日期:",class:"label_inline") %> 
+				 	 <%= datetime_field_tag(:start_time,@transaction_date,class: "auto_refresh") %>
+					 <%= label_tag(:l11, "交易来源系统:",class:"label_inline") %> 
+					 <%= select_tag(:system,options_for_select([["",""],["包裹网站","mypost4u"],["quaie","quaie"]],@system),class: "auto_refresh") %> 
+					 &nbsp;&nbsp;&nbsp;
+					 <%= label_tag(:l12, "包裹发送国家:",class:"label_inline") %>
+					 <%= select_tag(:send_country,options_for_select([["",""],["德国","de"],["荷兰","nl"],["中国","cn"],["奥地利","at"],["英国","gb"]],@send_country),class: "auto_refresh") %> 
+<!-- 					 <%= label_tag(:l2, "最晚对账成功时间:") %>  -->
 					 <%= hidden_field_tag(:max_updated_at,@max_updated_at) %>
+					 </br>
+					 </br>
 					 <%= label_tag(:l3, "对账成功未确认比数:") %> <%= text_field_tag(:confirm_num_display,@confirm_num,disabled: true) %>	
 					 <%= hidden_field_tag(:confirm_num,@confirm_num) %>
 					  <%= label_tag(:l4, "对账成功未确认金额:") %> <%= text_field_tag(:confirm_amount_display,@confirm_amount,disabled: true) %>
