--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -18,7 +18,7 @@
 				 <%= label_tag(:l4, "交易开始时间:",class:"label_inline") %> <%= datetime_field_tag(:start_time) %>
 				 <%= label_tag(:l5, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
 				 <%= label_tag(:l6, "国家:",class:"label_inline") %>
-				 <%= select_tag(:country,options_for_select([["",""],["德国","de"],["荷兰","nl"],["中国","cn"],["奥地利","at"],["英国","gb"]])) %> 
+				 <%= select_tag(:send_country,options_for_select(dynamic_send_country_select_tag)) %>
 				 <div class="btn-toolbar">
 					 <%= submit_tag("查询",class: "btn btn-primary",id: "button_submit_time") %>
 				          	<%=button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
