--- a/app/views/transaction_reconciliation/_index.html.erb
+++ b/app/views/transaction_reconciliation/_index.html.erb
@@ -4,12 +4,11 @@
 	<td class="td_nowrap">  <%= reconciliation_detail.transactionid %>  </td>
 	<td class="td_nowrap"> 
 		<% unless reconciliation_detail.online_pay.blank? %> 
-<!-- 			 <%= link_to reconciliation_detail.online_pay.order_no,show_single_online_pay_path(reconciliation_detail.online_pay),method: :get,target: :_blank %> -->
-		<a href="#" onclick="window.open('<%=show_single_online_pay_path(reconciliation_detail.online_pay)%>',
-			'_blank','scrollbars=0,toolbar=no,location=no,directories=no,status=yrd,menubar=no,scrollbars=no,resizable=yes;width=200');
-			return false">
-			<%=reconciliation_detail.online_pay.order_no%>
-		</a>
+			<a href="#" onclick="window.open('<%=show_single_online_pay_path(reconciliation_detail.online_pay)%>',
+				'_blank','scrollbars=0,toolbar=no,location=no,directories=no,status=yrd,menubar=no,scrollbars=no,resizable=yes;width=200');
+				return false">
+				<%=reconciliation_detail.online_pay.order_no%>
+			</a>
 		<% end %> 
 	</td>
 	<td class="td_nowrap">  <%= reconciliation_flag_mapping(reconciliation_detail.reconciliation_flag) %>  </td>
@@ -29,12 +28,14 @@
 	</td> -->
 	<td class="td_nowrap">  <%= reconciliation_detail.timestamp %>  </td>
 	<td>  
-		<% if  reconciliation_detail.reconciliation_flag==ReconciliationDetail::RECONCILIATIONDETAIL_FLAG['SUCC'] %> 
-			<%= link_to "手工撤销",modify_transaction_reconciliation_path(transactionid: reconciliation_detail.id,flag: reconciliation_detail.reconciliation_flag),method: "post",data: { confirm: "请确认是否手工撤销对账成功记录?\n#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}" } %>
-		<% else %>
-			<a href="#" onclick="modify_reconciliation('<%=reconciliation_detail.id%>','<%=reconciliation_detail.reconciliation_flag%>','<%="#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}"%>');return false">
-				手工对账
-			</a>
+		<% if isAuthority("8") %>
+			<% if  reconciliation_detail.reconciliation_flag==ReconciliationDetail::RECONCILIATIONDETAIL_FLAG['SUCC'] %> 
+				<%= link_to "手工撤销",modify_transaction_reconciliation_path(transactionid: reconciliation_detail.id,flag: reconciliation_detail.reconciliation_flag),method: "post",data: { confirm: "请确认是否手工撤销对账成功记录?\n#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}" } %>
+			<% else %>
+				<a href="#" onclick="modify_reconciliation('<%=reconciliation_detail.id%>','<%=reconciliation_detail.reconciliation_flag%>','<%="#{reconciliation_detail.transactionid}: #{reconciliation_detail.currencycode} #{reconciliation_detail.amt}"%>');return false">
+					手工对账
+				</a>
+			<% end %>
 		<% end %>
 	</td>
 </tr>
