--- a/app/views/online_pay/show_single_detail.html.erb
+++ b/app/views/online_pay/show_single_detail.html.erb
@@ -41,7 +41,7 @@
 					<tr>
 						<td>交易完成日期</td>
 						<td>
-							<% @online_pay.get_transaction_timestamp() %>
+							<%= @online_pay.get_transaction_timestamp() %>
 						</td>
 					</tr>
 					<tr>
