--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -66,7 +66,7 @@
 						<th>货币</th>
 <!-- 						<th>支付系统返回状态</th>
 						<th>对账备注</th> -->
-						<th>交易时间 </th>
+						<th>交易完成时间 </th>
 						<th>操作 </th>
 					</tr>
 				</thead>
