--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-<% @page_title="财务汇总" %>
+<% @page_title="交易汇总" %>
 	<div class="row-fluid">
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
