export file change

--- a/app/views/online_pay/show_single_detail.html.erb
+++ b/app/views/online_pay/show_single_detail.html.erb
@@ -27,7 +27,7 @@
 						<td><%= @online_pay.get_convert_currency() %></td>
 					</tr>
 					<tr>
-						<td>状态</td>
+						<td>交易状态</td>
 						<td><%= status_mapping(@online_pay.status) %></td>
 					</tr>
 					<tr>
