--- a/app/views/admin_manage/sign_in.html.erb
+++ b/app/views/admin_manage/sign_in.html.erb
@@ -1,6 +1,13 @@
 <div class="no_container-fluid">
 <% @page_title="登入界面" %>
 	<div class="row-fluid">
+		<% unless flash[:notice].blank? %>
+			<div class="alert alert-info">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				<%=flash[:notice]%>
+			</div>
+		<% end %>
+
 		<div class="well">
 			<%= form_for :admin,url: admin_manage_sign_in_path,method: :post do |f| %>
 				<%=label_tag :label1,"用户名:" %> <%=f.text_field :admin_name %> </br></br>
