--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
                         	<i class="icon-user"></i> <%=session[:admin]%>
                            	<i class="icon-caret-down"></i>
 		<ul class="dropdown-menu">
+			<li><%=link_to t('密码修改'),admin_manage_passwd_new_path,method: :get,tabindex: -1%></li>
+			<li class="divider"></li>
 			<% if isAuthority('99') %>
 				<li><%=link_to t('帐号设置'),admin_setting_index_path,method: :get,tabindex: -1%></li>
 			<% end %>
