--- a/app/views/transaction_reconciliation/index.html.erb
+++ b/app/views/transaction_reconciliation/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="row-fluid">
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
-			<strong>提示:</strong> 请输入查询条件进行查询!
+			<strong>提示:</strong> 请输入查询条件进行查询!(时间段必输)
 		</div>
 		<div class="row-fluid">
 			<div class="well">
@@ -36,7 +36,7 @@
 				 &nbsp;&nbsp;&nbsp;
 				 <%= label_tag(:l10, "交易完成止期:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
 				 <div class="btn-toolbar">
-					<%= submit_tag("查询",class: "btn btn-primary") %>
+					<%= submit_tag("查询",class: "btn btn-primary",id: "button_submit_time") %>
 					<%= link_to "导出",transaction_reconciliation_export_path,class: "btn",method: "get",id: "link_to_export"%>
 				          	<%= button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
 			          	</div>
