--- a/app/views/transaction_reconciliation/report.html.erb
+++ b/app/views/transaction_reconciliation/report.html.erb
@@ -3,22 +3,26 @@
 	<div class="row-fluid">
 		<div class="alert alert-info">
 			<button type="button" class="close" data-dismiss="alert">×</button>
-			<strong>提示:</strong> 请输入查询条件进行查询!
+			<strong>提示:</strong> 请输入查询条件进行查询!(时间段必输)
 		</div>
 		<div class="row-fluid">
 			<div class="well">
 			<%= form_tag transaction_reconciliation_report_path,method:"get",remote: :true do %>
-				 <%= label_tag(:l1, "支付类型:",class:"label_inline") %> 
+				 <%= label_tag(:l1, "支付类型:",class:"label_inline") %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				 <%= select_tag(:payway,options_for_select([["",""],["paypal","paypal"],["sofort","sofort"],["支付宝","alipay"],["积分","score"],["电子现金","e_cash"]])) %> 
-				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>
+				 &nbsp;&nbsp;
+				 <%= label_tag(:l2, "支付子类型:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;&nbsp;
 				 <%= select_tag(:paytype,options_for_select([["",""],["国内支付","transaction"],["海外支付","oversea"]])) %> 
-				 <%= label_tag(:l3, "货币:",class:"label_inline") %>
+				 </br>
+				 <%= label_tag(:l3, "货币:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				 <%= select_tag(:currency,options_for_select([["",""],["EUR","EUR"],["GBP","GBP"],["RMB","RMB"]])) %> 
+				 &nbsp;&nbsp;
+				 <%= label_tag(:l6, "国家:",class:"label_inline") %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				 <%= select_tag(:send_country,options_for_select(dynamic_send_country_select_tag)) %>
 				 </br>
 				 <%= label_tag(:l4, "交易开始时间:",class:"label_inline") %> <%= datetime_field_tag(:start_time) %>
+				 &nbsp;&nbsp;
 				 <%= label_tag(:l5, "交易结束时间:",class:"label_inline") %> <%= datetime_field_tag(:end_time) %>
-				 <%= label_tag(:l6, "国家:",class:"label_inline") %>
-				 <%= select_tag(:send_country,options_for_select(dynamic_send_country_select_tag)) %>
 				 <div class="btn-toolbar">
 					 <%= submit_tag("查询",class: "btn btn-primary",id: "button_submit_time") %>
 				          	<%=button_tag("清除条件",type: 'button',class: "btn",id: "button_clear") %>
