--- a/app/views/transaction_reconciliation/confirm_search.html.erb
+++ b/app/views/transaction_reconciliation/confirm_search.html.erb
@@ -17,10 +17,14 @@
 				<%= form_tag transaction_reconciliation_confirm_path,method:"post",name: "form1" do %>
 				 	 <%= label_tag(:l1, "交易日期:",class:"label_inline") %> 
 				 	 <%= datetime_field_tag(:start_time,@transaction_date,class: "auto_refresh") %>
+					 &nbsp;&nbsp;&nbsp;
 					 <%= label_tag(:l11, "交易来源系统:",class:"label_inline") %> 
 					 <%= select_tag(:system,options_for_select([["",""],["包裹网站","mypost4u"],["quaie","quaie"]],@system),class: "auto_refresh") %> 
+					 </br>
+					<%= label_tag(:l13, "确认类型:",class:"label_inline") %>					 
+					<%= select_tag(:reconciliation_type,options_for_select([["进账","in"],["退费","out"]],@reconciliation_type),class: "auto_refresh") %> 
 					 &nbsp;&nbsp;&nbsp;
-					 <%= label_tag(:l12, "包裹发送国家:",class:"label_inline") %>
+					<%= label_tag(:l12, "包裹发送国家:",class:"label_inline") %>
 					<%= select_tag(:send_country,options_for_select(dynamic_send_country_select_tag,@send_country),class: "auto_refresh") %>
 <!-- 					 <%= label_tag(:l2, "最晚对账成功时间:") %>  -->
 					 <%= hidden_field_tag(:max_updated_at,@max_updated_at) %>
