--- a/app/views/registe/index.html.erb
+++ b/app/views/registe/index.html.erb
@@ -14,7 +14,7 @@
 					 <%= label_tag(:l3, "注册E-Mail:",class:"label_inline") %> <%= text_field_tag(:email) %>
 					 </br>
 					 <%= label_tag(:l4, "流水类型:",class:"label_inline") %>
-					 <%= select_tag(:symbol,options_for_select([["",""],["积分","e_cash"],["电子现金","score"]])) %> 
+					 <%= select_tag(:symbol,options_for_select([["",""],["积分","score"],["电子现金","e_cash"]])) %> 
 					 <%= label_tag(:l5, "流水金额起始:",class:"label_inline") %> <%= text_field_tag(:min_amount) %>
 					 <%= label_tag(:l6, "流水金额终止:",class:"label_inline") %> <%= text_field_tag(:max_amount) %>
 					 <div class="btn-toolbar">
