--- a/app/views/transaction_reconciliation/report.js.erb
+++ b/app/views/transaction_reconciliation/report.js.erb
@@ -1,6 +1,10 @@
 $('#td_replace_total_num').html("<%=@finance_summary.total_num%>")
 $('#td_replace_succ_num').html("<%=@finance_summary.succ_num%>")
 $('#td_replace_fail_num').html("<%=@finance_summary.fail_num%>")
+$('#td_replace_succ_execption_num').html("<%=@finance_summary.succ_execption_num%>")
+$('#td_replace_uncompleted_num').html("<%=@finance_summary.uncompleted_num%>")
 $('#td_replace_total_amount').html("<%=@finance_summary.total_amount%>")
 $('#td_replace_succ_amount').html("<%=@finance_summary.succ_amount%>")
 $('#td_replace_fail_amount').html("<%=@finance_summary.fail_amount%>")
+$('#td_replace_succ_execption_amount').html("<%=@finance_summary.succ_execption_amount%>")
+$('#td_replace_uncompleted_amount').html("<%=@finance_summary.uncompleted_amount%>")
