--- a/app/views/online_pay/_online_pay_and_user_detail_content.html.erb
+++ b/app/views/online_pay/_online_pay_and_user_detail_content.html.erb
@@ -1,5 +1,5 @@
 <tr class="tr_relpace">
-	<td class="td_nowrap"><%=link_to  online_pay.user.username,registe_index_path(system: online_pay.user.system,username: online_pay.user.username),method: :get,title: "#{online_pay.user.username}"%></td>
+	<td class="td_nowrap"><%=link_to  online_pay.user.username,registe_index_path(system: online_pay.user.system,username: online_pay.user.username),method: :get,title: online_pay.user.username%></td>
 	<td class="td_nowrap">
 		<span title="<%= online_pay.reconciliation_id %>">
 			<%= online_pay.reconciliation_id %>
@@ -35,8 +35,15 @@
 		</span>
 	</td>
 	<td class="td_nowrap">
-		<span title="<%= online_pay.reason %>">
-			<%= online_pay.reason %>
-		</span>
+		<% case get_expection_type_by_auth(online_pay.status)%>
+		<% when 'manual_payment'%>
+			<%=link_to '手动支付',expection_handling_manual_payment_path(online_pay_id: online_pay.id),method: :post,title: online_pay.reason%>
+		<% when 'recall_notify'%>
+			<%=link_to '手动调用',expection_handling_recall_notify_path(online_pay_id: online_pay.id),method: :post,title: online_pay.reason%>
+		<% else %>
+			<span title="<%= online_pay.reason %>">
+				<%= online_pay.reason %>
+			</span>		
+		<% end %>
 	</td>
 </tr>
